Fixed Print Layout Issues with cloned slides in interaction.js and interaction.css; Refactored hide/show helper to hide_node for proper collapsing in slide.py

--- a/ipyslides/_base/static/interaction.css
+++ b/ipyslides/_base/static/interaction.css
@@ -60,9 +60,9 @@
         min-height: max-content !important;
     }
     .ipyslides-print-node.SlidesWrapper .SlideBox .SlideArea {
-        position:  relative !important; /* to hold background image */
+        position:  relative !important; /* to hold background image and stuff properly and itself in order */
         visibility: visible !important;
-        transform: none !important;
+        transform: translateZ(0) scale(1) !important; /* still need to contain stuff properly inside it and have crispy text*/
         /* height: auto !important;  */
         page-break-inside: avoid !important; /* avoid for slides printing */
         page-break-after: always !important;
